Fixing css issue on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,5 +12,5 @@ h1 { text-align: center; font-size:42px; font-weight:800;
 
 @media only screen and (max-width: 600px) {
 
- img {width: 100%; height: 100%; margin: 0; padding: 0;}
+ img {height: auto !important;width: 100%; height: 100%; margin: 0; padding: 0;}
 }
